use List method getFirst()